fixed datapack nutrition_manager overwrite error